--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     </head>
     <body>
-        <h1>Odin Recipes<h1>
+        <h1>Odin Recipes</h1>
+        <a href = "./recipes/sweet-bread.html" target = "_blank" rel = "noopener noreferrer"> Sweet bread recipe </a>
     </body>
 </html>
