--- a/recipes/sweet-bread.html
+++ b/recipes/sweet-bread.html
@@ -7,5 +7,18 @@
     </head>
     <body>
         <h1>Sweet Bread Recipe<h1>
+        <img src = "../images/sweet-bread.jpg" alt = "sweet-bread image">
+        <h2> Description </h2>
+        <p>A simple recipe on how to make sweet bread</p>
+        <h2>Ingrediants</h2>
+        <ul>
+            <li> 1 cup milk </li>
+            <li> ⅓ cup white sugar </li>
+            <li>4 cups all-purpose flour</li>
+            <li>½ teaspoon salt</li>
+            <li>⅓ cup unsalted butter, softened</li>
+            <li>2 large eggs</li>
+            <li>2 tablespoons vegetable oil, divided, or as needed</li>
+        </ul>
     </body>
 </html>
