Fix ingredient typ and adjust sweet bread image dimensions

--- a/recipes/sweet-bread.html
+++ b/recipes/sweet-bread.html
@@ -6,11 +6,11 @@
 
     </head>
     <body>
-        <h1>Sweet Bread Recipe<h1>
-        <img src = "../images/sweet-bread.jpg" alt = "sweet-bread image">
+        <h1>Sweet Bread Recipe<h1>  
+        <img src = "../images/sweet-bread.jpg" width = "500" height = "500" alt = "sweet-bread image">
         <h2> Description </h2>
         <p>A simple recipe on how to make sweet bread</p>
-        <h2>Ingrediants</h2>
+        <h2>Ingredients</h2>
         <ul>
             <li> 1 cup milk </li>
             <li> ⅓ cup white sugar </li>
