--- a/recipes/sweet-bread.html
+++ b/recipes/sweet-bread.html
@@ -7,9 +7,11 @@
     </head>
     <body>
         <h1>Sweet Bread Recipe<h1>  
-        <img src = "../images/sweet-bread.jpg" width = "500" height = "500" alt = "sweet-bread image">
+        <img src = "../images/sweet-bread.jpg" width = "400" height = "300" alt = "sweet-bread image">
+
         <h2> Description </h2>
         <p>A simple recipe on how to make sweet bread</p>
+
         <h2>Ingredients</h2>
         <ul>
             <li> 1 cup milk </li>
@@ -20,5 +22,20 @@
             <li>2 large eggs</li>
             <li>2 tablespoons vegetable oil, divided, or as needed</li>
         </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Combine milk and sugar in a small saucepan over medium heat. Heat until slightly warm to the touch then remove from heat and stir in yeast. Let stand until foamy, about 10 minutes</li>
+            <li>Stir together flour and salt in the bowl of a stand mixer fitted with the dough hook. Add softened butter, eggs, and the yeast mixture and mix until dough pulls away from the sides of the bowl.</li>
+            <li>Turn dough out onto a floured surface and continue to knead until the dough is smooth and elastic, about 10 minutes.</li>
+            <li>Grease a large bowl with 1 tablespoon oil. Place the dough into the bowl and turn once to coat. Cover and let stand in a warm place until doubled in size, about 1 hour.</li>
+            <li>Grease a cookie sheet or 9x13-inch pan with remaining oil.</li>
+            <li>For plain rolls, punch down dough and divide into 12 equal pieces. Roll the pieces into balls and place them into the greased pan side by side.</li>
+            <li>Cover and let dough rise again until almost doubled in size, 20 to 25 minutes.</li>
+            <li>Meanwhile, preheat the oven to 375 degrees F (190 degrees C).</li>
+            <li>Bake in the preheated oven until rolls are golden brown, 20 to 25 minutes.</li>
+
+        </ol>
+        
     </body>
 </html>
