--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset = "UTF-8">
         <title> Odin Recipes </title>
-
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src = "../images/chef.jpg" alt = "chef">
         <a href = "./recipes/sweet-bread.html" target = "_blank" rel = "noopener noreferrer"> Sweet bread recipe </a>
     </body>
 </html>
