Add link to baguette-pizza page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <img src = "../images/chef.jpg" alt = "chef">
-        <a href = "./recipes/sweet-bread.html" target = "_blank" rel = "noopener noreferrer"> Sweet bread recipe </a>
+        <img src = "./images/chef.jpg" alt = "chef">
+        <h2>Recipes</h2>
+        <ul>
+            <li><a href = "./recipes/sweet-bread.html" target = "_blank" rel = "noopener noreferrer"> Sweet bread recipe </a></li>
+            <li><a href = "./recipes/baguette-pizza.html"target = "_blank" rel = "noopener noreferrer">Baguette pizza recipe</li>
+            <li></li>
+        </ul>
     </body>
 </html>
