--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h2>Recipes</h2>
         <ul>
             <li><a href = "./recipes/sweet-bread.html" target = "_blank" rel = "noopener noreferrer"> Sweet bread recipe </a></li>
-            <li><a href = "./recipes/baguette-pizza.html"target = "_blank" rel = "noopener noreferrer">Baguette pizza recipe</li>
-            <li></li>
+            <li><a href = "./recipes/baguette-pizza.html"target = "_blank" rel = "noopener noreferrer">Baguette pizza recipe</a></li>
+            <li><a href = "./recipes/air-fried-glizzies.html" target = "_blank" rel = "noopener noreferrer">Air fried glizzies</a></li>
         </ul>
     </body>
 </html>
